Add hay bale clutch and fix unprotected fall.