@@ -25,20 +25,18 @@ import baritone.pathing.clutch.Clutch;
 import baritone.pathing.movement.MovementHelper;
 import baritone.pathing.movement.MovementState;
 import baritone.utils.pathing.MutableClutchResult;
-import net.minecraft.core.BlockPos;
+import com.google.common.collect.ImmutableSet;
 import net.minecraft.core.Direction;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 
-import java.util.Set;
-
 public final class LadderClutch extends Clutch {
-    public static final Clutch INSTANCE = new LadderClutch();
+    public static final LadderClutch INSTANCE = new LadderClutch();
 
     private LadderClutch() {
-        super(Set.of(new ItemStack(Items.LADDER)));
+        super(ImmutableSet.of(new ItemStack(Items.LADDER)), 0f);
     }
     public boolean compare(BlockState state) {
         return state.is(Blocks.LADDER);
